# ContactEval

./: .gitignore  LICENSE  README.md  models_mock.json  pyproject.toml  walkthrough.md
contacteval/: cli.py
contacteval/game/: engine.py  models.py  rules.py
contacteval/players/: adapters.py  base.py  factory.py
contacteval/prompts/: templates.py
contacteval/ranking/: leaderboard.py  system.py
contacteval/storage/: json_store.py
contacteval/tournament/: runner.py  scheduler.py
contacteval/words/: bank.py
docs/: design.md
tests/: test_engine_scaffolding.py
